#36: Build script now creates final distribution bundles and uses jmod and link Ant tasks instead of exec.